test/visibility/import/enablesUnqualified/multipleUnqualified/outerUseLimitsInnerImport-error.good
outerUseLimitsInnerImport-error.chpl:11: In function 'main':
outerUseLimitsInnerImport-error.chpl:12: error: 'y' undeclared (first use this function)
